JumpScript/tests/baselines/reference/staticInstanceResolution4.errors.txt
tests/cases/compiler/staticInstanceResolution4.jump(5,3): error TS2339: Property 'foo' does not exist on type 'typeof A'.


==== tests/cases/compiler/staticInstanceResolution4.jump (1 errors) ====
    class A {
       public foo() {}
    }
    
    A.foo();
      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof A'.